--- a/website/epubit/html/index.html
+++ b/website/epubit/html/index.html
@@ -34,11 +34,17 @@
 		        </a>
 			</div>
 			<div class="navbar-collapse collapse" role="navigation" aria-expanded="false">
-				<ul class="nav navbar-nav navbar-right">
+				<ul class="nav navbar-nav navbar-right hidden-xs">
 					<li>
 						<a href="" class="write"><span class="glyphicon glyphicon-pencil"></span>写作</a>
 					</li>
 				</ul>
+				<div class="nav navbar-nav visible-xs-block">
+					<div class="search-box">
+						<span class="glyphicon glyphicon-search"></span>
+						<input type="text" class="txt" placeholder="搜索图书名称/作者/类别">
+					</div>
+				</div>
 				<ul class="nav navbar-nav">
 					<li class="dropdown">
 						<a href="" id="techCircleAll" class="dropdown-toggle" data-toggle="dropdown">技术圈<b class="caret"></b></a>
